Remove unused files and dependencies, including .editorconfig, code quality rules documentation, and various NuGet packages related to code analysis. Update project files to reflect these changes.

--- a/CodeQuality.csproj
+++ b/CodeQuality.csproj
@@ -15,27 +15,16 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
 
-    <!-- SonarAnalyzer for C# -->
-    <PackageReference Include="SonarAnalyzer.CSharp" Version="9.16.0.82469">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-    </PackageReference>
-
-    <!-- Microsoft Code Analysis -->
-    <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="9.0.0">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-    </PackageReference>
-
-    <!-- Roslynator Analyzers -->
-    <PackageReference Include="Roslynator.Analyzers" Version="4.12.0">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-    </PackageReference>
-
     <!-- Additional Dependencies -->
-    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EditorConfigFiles Remove="D:\ActiveProjs\CodeQuality\CodeQuality\.editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="D:\ActiveProjs\CodeQuality\CodeQuality\.editorconfig" />
   </ItemGroup>
 
 </Project>
